# azure-iot-middleware-freertos

./: .gitmodules  CMakeLists.txt
ports/mbedTLS/: azure_iot_jws_mbedtls.c
source/: CMakeLists.txt  azure_iot_adu_client.c
source/include/: azure_iot_adu_client.h
source/interface/: azure_iot_jws.h  azure_iot_transport_interface.h
tests/e2e/adu/device/: e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c
tests/e2e/iot/device/: e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c
